# MicrosoftTeamsBot

./: README.md  dockerfile  pyproject.toml  requirements.txt
src/: main.py  session_handler.py
src/bot/: botAdapter.py  botHandler.py
src/config/: __init__.py  config.json
src/core/cards/: cardActions.py
src/core/cards/cardFiles/: adaptiveTest.json  issueQueue.json  issueQueueRow.json  queuePosition.json  supportIssue.json
src/core/messages/: handler.py
src/core/support/: supportIssues.py
src/models/: __init__.py  baseModel.py  requestModels.py  supportModel.py
src/models/cards/: adaptiveCardModel.py  cardModels.py
src/models/cards/cardObjects/: actions.py  columns.py  containers.py  facts.py  images.py  inputs.py  tables.py  text.py
src/models/procs/: procModels.py
src/models/sessions/: sessionModels.py
src/models/sessions/http/: httpModels.py
src/procs/: botProcs.py
src/session/: __init__.py
src/utils/: objectInfo.py
src/web/: msgs.py  webServer.py
